--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GEMINI_API_KEY=AIzaSyC1_3mAnafIcd4l0iGbcTySU4DI37ZJOA0
-JWT_SECRET=my_auth_secret
-DB_URI=mongodb+srv://ryanjayawardana:Ryan%400808@legalmindassist.srmu6.mongodb.net
+GEMINI_API_KEY=
+JWT_SECRET=
+DB_URI=
 
